--- a/submit.html
+++ b/submit.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit a Paper — AI-Theoretical</title
-    <meta name="description" content="Our vision for human-AI symbiosis in theoretical research. Exploring transparent authorship and AI as an active cognitive partner in epistemology and science.">
-    <meta property="og:title" content="Manifesto — AI-Theoretical">
-    <meta property="og:description" content="A new framework for human-AI co-authorship in theoretical disciplines.">
+    <title>Submit a Paper — AI-Theoretical</title>
+    <meta name="description" content="Submit your human-AI co-authored theoretical paper for publication on AI-Theoretical.">
+    <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, submit paper, publication">
+    <meta property="og:title" content="Submit a Paper — AI-Theoretical">
+    <meta property="og:description" content="Submit your human-AI co-authored theoretical paper for publication.">
+    <meta property="og:url" content="https://ai-theoretical.org/submit.html">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
-
     <style>
         * {
             box-sizing: border-box;
