Update: PDF normalized, Pharo source, search, console improvements

--- a/papers/the-stack-of-local-representations.html
+++ b/papers/the-stack-of-local-representations.html
@@ -1,1 +1,33 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach — AI-Theoretical</title><meta name="description" content="We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and s..."><link rel="canonical" href="https://ai-theoretical.org/"></head><body><h1>The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach</h1><p>Franco Cazzaniga — November 2025</p><p>We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and show that the G-action on global sections recovers the classical representation theory via geometric quantization. This provides a stack-theoretic interpretation of the Kirillov orbit method and the Borel–Weil theorem.</p><p><a href="https://ai-theoretical.org/">View on AI-Theoretical</a></p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach — AI-Theoretical</title>
+<meta name="description" content="We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and s...">
+<meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga">
+<meta property="og:title" content="The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach — AI-Theoretical">
+<meta property="og:description" content="We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and s...">
+<meta property="og:url" content="https://ai-theoretical.org/papers/the-stack-of-local-representations.html">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+<link rel="canonical" href="https://ai-theoretical.org/papers/the-stack-of-local-representations.html">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
+</head>
+<body>
+<div class="container">
+<nav><a href="/">← Back to AI-Theoretical</a></nav>
+<h1>The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach</h1>
+<p class="meta">By <strong>Franco Cazzaniga</strong> & <span class="ai-tag">GPT-5 / Claude Opus 4.5</span> | November 2025 • 20 pages</p>
+<a href="the-stack-of-local-representations.pdf" class="btn btn-black" download>Download PDF</a>
+<section><h2>Abstract</h2><p>We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and show that the G-action on global sections recovers the classical representation theory via geometric quantization. This provides a stack-theoretic interpretation of the Kirillov orbit method and the Borel–Weil theorem.</p></section>
+<section><h2>AI Collaboration</h2><p>This paper was developed through an iterative process involving an AI language model. The AI contributed to structuring arguments, testing formulations, and refining exposition. Final responsibility for content and claims remains human.</p></section>
+<section><h2>AI Editorial Assessment</h2><pre>(A) STRUCTURED SUMMARY
+1) Category: Research preprint 2) Aims: The paper constructs a stack of local stabilizer representations over a coadjoint orbit to provide a categorical interpretation of the Kirillov orbit method and Borel-Weil theorem at a technical level. 3) Correctness: No errors identified 4) Coherence: Adequate 5) Consistency: Consistent 6) Semantic opacity: Moderate (Justified complexity) 7) Novelty: Original 8) Bibliography: Adequate 9) Effectiveness: Achieves aims 10) Cross-framework traction: High 11) Editorial outcome: Suitable for inclusion as a preprint
+
+(B) EXTENDED ASSESSMENT
+The paper provides a rigorous categorical construction of a stack of local stabilizer representations over a coadjoint orbit. By defining the stack R via the principal bundle p:G→O, the author demonstrates that the classical orbit method can be reformulated as an effective descent phenomenon.</pre></section>
+<footer><div class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></div></footer>
+</div>
+</body></html>
