--- a/papers/the-invisible-pillar-on-the.html
+++ b/papers/the-invisible-pillar-on-the.html
@@ -1,1 +1,42 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>The Invisible Pillar: On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical</title><meta name="description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat..."><link rel="canonical" href="https://ai-theoretical.org/"></head><body><h1>The Invisible Pillar: On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns</h1><p>Franco Cazzaniga — December 2025</p><p>This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Platonic inauguration to its modern transformations. The central thesis is that Plato introduced a structural division that subsequent philosophy inherited, criticized superficially, re-articulated, but rarely questioned as a framework.</p><p><a href="https://ai-theoretical.org/">View on AI-Theoretical</a></p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>The Invisible Pillar: On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical</title>
+<meta name="description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
+<meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga">
+<meta property="og:title" content="The Invisible Pillar: On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical">
+<meta property="og:description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
+<meta property="og:url" content="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+<link rel="canonical" href="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
+</head>
+<body>
+<div class="container">
+<nav><a href="/">← Back to AI-Theoretical</a></nav>
+<h1>The Invisible Pillar: On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns</h1>
+<p class="meta">By <strong>Franco Cazzaniga</strong> & <span class="ai-tag">Claude Opus 4.5 (Anthropic)</span> | December 2025 • 20 pages</p>
+<a href="the-invisible-pillar-on-the.pdf" class="btn btn-black" download>Download PDF</a>
+<section><h2>Abstract</h2><p>This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Platonic inauguration to its modern transformations. The central thesis is that Plato introduced a structural division that subsequent philosophy inherited, criticized superficially, re-articulated, but rarely questioned as a framework.</p></section>
+<section><h2>AI Collaboration</h2><p>This paper was developed through an iterative process involving an AI language model. The AI contributed to structuring arguments, testing formulations, and refining exposition. Final responsibility for content and claims remains human.</p></section>
+<section><h2>AI Editorial Assessment</h2><pre>(A) STRUCTURED SUMMARY
+Category: Expository/theoretical essay. 
+Aims: The text aims to trace the genealogy of dualism from its pre-Socratic background through its Platonic inauguration to its modern transformations to expose it as an assimilated historical structure at a synthetic level.
+Correctness: No errors identified
+Coherence: Adequate
+Consistency: Consistent
+Semantic opacity: Low (Transparent)
+Novelty: Consolidative
+Bibliography: Adequate
+Effectiveness: Achieves aims
+Cross-framework traction: High
+Editorial outcome: Suitable for inclusion as a preprint
+
+(B) EXTENDED ASSESSMENT The text provides a synthetic genealogy of dualism, beginning with the pre-Socratic focus on "ta onta". It argues that Plato introduced a structural division between the intelligible and sensible that subsequent philosophy has largely naturalized as an "invisible pillar". The assessment identifies the work as an expository/theoretical essay that achieves its aims by clearly articulating how this framework transitioned from an epistemic social distinction in antiquity to a cosmological and metaphysical one in the modern era.</pre></section>
+<footer><div class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></div></footer>
+</div>
+</body></html>
