--- a/papers/wave-function-collapse-as-lie.html
+++ b/papers/wave-function-collapse-as-lie.html
@@ -1,1 +1,42 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical</title><meta name="description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the Inönü–Wigner contraction of..."><link rel="canonical" href="https://ai-theoretical.org/"></head><body><h1>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm</h1><p>Franco Cazzaniga — December 2025</p><p>We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the Inönü–Wigner contraction of Lie algebras. The inhomogeneous magnetic field of the apparatus explicitly breaks the internal SU(2) symmetry of the spin degree of freedom, inducing a continuous deformation of the spin algebra toward the Euclidean algebra e(2).</p><p><a href="https://ai-theoretical.org/">View on AI-Theoretical</a></p></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical</title>
+<meta name="description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the Inönü–Wigner contraction of...">
+<meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga">
+<meta property="og:title" content="Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical">
+<meta property="og:description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the Inönü–Wigner contraction of...">
+<meta property="og:url" content="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+<link rel="canonical" href="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
+</head>
+<body>
+<div class="container">
+<nav><a href="/">← Back to AI-Theoretical</a></nav>
+<h1>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm</h1>
+<p class="meta">By <strong>Franco Cazzaniga</strong> & <span class="ai-tag">GPT-5 / Claude Opus 4.5</span> | December 2025 • 30 pages</p>
+<a href="wave-function-collapse-as-lie.pdf" class="btn btn-black" download>Download PDF</a>
+<section><h2>Abstract</h2><p>We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the Inönü–Wigner contraction of Lie algebras. The inhomogeneous magnetic field of the apparatus explicitly breaks the internal SU(2) symmetry of the spin degree of freedom, inducing a continuous deformation of the spin algebra toward the Euclidean algebra e(2).</p></section>
+<section><h2>AI Collaboration</h2><p>This paper was developed through an iterative process involving an AI language model. The AI contributed to structuring arguments, testing formulations, and refining exposition. Final responsibility for content and claims remains human.</p></section>
+<section><h2>AI Editorial Assessment</h2><pre>(A) STRUCTURED SUMMARY
+Category: Research preprint
+Aims: To provide a technical and conceptual account of spin measurement in the Stern–Gerlach experiment by modeling wave function collapse as a symmetry-breaking Inönü–Wigner contraction of the su(2) algebra.
+Correctness: No errors identified.
+Coherence: Adequate.
+Consistency: Consistent.
+Novelty: Original.
+Bibliography: Adequate.
+Effectiveness: Achieves aims.
+Cross-framework traction: High.
+Editorial outcome: Suitable for inclusion as a preprint.
+
+(B) EXTENDED ASSESSMENT
+The manuscript develops a mathematically explicit framework in which the discreteness and basis selection of Stern–Gerlach outcomes are explained through an Inönü–Wigner contraction of su(2) to e(2), induced by the anisotropic measurement interaction.</pre></section>
+<footer><div class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></div></footer>
+</div>
+</body></html>
