Refactor: generate all static HTML pages from Pharo

--- a/invite.html
+++ b/invite.html
@@ -8,89 +8,82 @@
     <meta property="og:title" content="Join AI-Theoretical">
     <meta property="og:description" content="Call for contributions: human-AI symbiotic theoretical works.">
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-
     <style>
-        :root {
-            --accent-blue: #2563eb;
-            --text-main: #1a1a1a;
-            --text-muted: #666;
-            --border: #e5e5e0;
-        }
+:root {
+    --accent-blue: #2563eb;
+    --text-main: #1a1a1a;
+    --text-muted: #666;
+    --border: #e5e5e0;
+}
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #fff;
-            color: var(--text-main);
-            line-height: 1.6;
-            padding: 0 40px;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body {
+    font-family: 'Inter', sans-serif;
+    background: #fff;
+    color: var(--text-main);
+    line-height: 1.6;
+    padding: 0 40px;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
-        header {
-            padding: 60px 0 30px;
-        }
+header {
+    padding: 60px 0 30px;
+}
 
-        .nav {
-            font-size: 0.75rem;
-            color: var(--text-muted);
-            text-decoration: none;
-            display: inline-block;
-            margin-bottom: 10px;
-        }
+.nav {
+    font-size: 0.75rem;
+    color: var(--text-muted);
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 10px;
+}
 
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.4rem;
-            font-weight: 700;
-            letter-spacing: -1px;
-            margin-bottom: 20px;
-        }
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.4rem;
+    font-weight: 700;
+    letter-spacing: -1px;
+    margin-bottom: 20px;
+}
 
-        hr {
-            border: 0;
-            border-top: 1px solid var(--border);
-            margin-bottom: 40px;
-        }
+hr {
+    border: 0;
+    border-top: 1px solid var(--border);
+    margin-bottom: 40px;
+}
 
-        .section {
-            max-width: 720px;
-            font-size: 0.95rem;
-            margin-bottom: 30px;
-        }
+.section {
+    max-width: 720px;
+    font-size: 0.95rem;
+    margin-bottom: 30px;
+}
 
-        footer {
-            margin: 80px 0 60px;
-            padding-top: 40px;
-            border-top: 1px solid var(--border);
-            font-size: 0.85rem;
-            color: var(--text-muted);
-            text-align: center;
-        }
-    </style>
+footer {
+    margin: 80px 0 60px;
+    padding-top: 40px;
+    border-top: 1px solid var(--border);
+    font-size: 0.85rem;
+    color: var(--text-muted);
+    text-align: center;
+}    </style>
 </head>
-
 <body>
 <div class="container">
-
 <header>
     <a href="index.html" class="nav">← Back</a>
     <h1>Invitation to Participate</h1>
     <hr>
 </header>
-
 <div class="section">
     <p>
         AI-Theoretical invites researchers and scholars interested in using AI as an active partner
         in theoretical work to participate in the project.
     </p>
 </div>
-
 <div class="section">
     <p>
         The platform hosts high-level preprints or working papers developed in explicit collaboration
@@ -98,7 +91,6 @@
         mathematics, philosophy, and other domains where theoretical reasoning plays a central role.
     </p>
 </div>
-
 <div class="section">
     <p>
         Texts that fit the scope of the platform may subsequently undergo an
@@ -106,10 +98,22 @@
         provisions outlined in the AI editorial prompt and published alongside the paper.
     </p>
 </div>
-
 <div class="section">
     <p>
         If you are interested in contributing or in discussing a possible collaboration,
+        you are invited to get in touch.
+    </p>
+</div>
+<div class="section">
+    <p>
+        Contact: <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
+    </p>
+</div>
+<footer>
+    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
+</footer>
+</div></body>
+</html>ration,
         you are invited to get in touch.
     </p>
 </div>
