--- a/ai-editorial-prompt.html
+++ b/ai-editorial-prompt.html
@@ -5,93 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Editorial Prompt — AI-Theoretical</title>
     <meta name="description" content="Transparency in evaluation: read the exact system prompt used for the AI-assisted editorial assessment of our papers.">
-    <meta property="og:title" content="AI Editorial Prompt — Methodological Transparency">
+    <meta property="og:title" content="AI Editorial Prompt — AI-Theoretical">
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-
     <style>
-        :root {
-            --accent-blue: #2563eb;
-            --text-main: #1a1a1a;
-            --text-muted: #666;
-            --border: #e5e5e0;
-        }
+:root {
+    --accent-blue: #2563eb;
+    --text-main: #1a1a1a;
+    --text-muted: #666;
+    --border: #e5e5e0;
+}
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #fff;
-            color: var(--text-main);
-            line-height: 1.6;
-            padding: 0 40px;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body {
+    font-family: 'Inter', sans-serif;
+    background: #fff;
+    color: var(--text-main);
+    line-height: 1.6;
+    padding: 0 40px;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
-        header {
-            padding: 60px 0 30px;
-        }
+header {
+    padding: 60px 0 30px;
+}
 
-        .nav {
-            font-size: 0.75rem;
-            color: var(--text-muted);
-            text-decoration: none;
-            display: inline-block;
-            margin-bottom: 10px;
-        }
+.nav {
+    font-size: 0.75rem;
+    color: var(--text-muted);
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 10px;
+}
 
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.4rem;
-            font-weight: 700;
-            letter-spacing: -1px;
-            margin-bottom: 20px;
-        }
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.4rem;
+    font-weight: 700;
+    letter-spacing: -1px;
+    margin-bottom: 20px;
+}
 
-        hr {
-            border: 0;
-            border-top: 1px solid var(--border);
-            margin-bottom: 40px;
-        }
+hr {
+    border: 0;
+    border-top: 1px solid var(--border);
+    margin-bottom: 40px;
+}
 
-        .section {
-            max-width: 720px;
-            font-size: 0.95rem;
-            margin-bottom: 30px;
-        }
+.section {
+    max-width: 720px;
+    font-size: 0.95rem;
+    margin-bottom: 30px;
+}
 
-        .prompt-frame {
-            border: 1px solid var(--border);
-            padding: 30px;
-            margin: 40px 0;
-            background: #fafafa;
-        }
+footer {
+    margin: 80px 0 60px;
+    padding-top: 40px;
+    border-top: 1px solid var(--border);
+    font-size: 0.85rem;
+    color: var(--text-muted);
+    text-align: center;
+}
 
-        .prompt-version {
-            font-size: 0.75rem;
-            color: var(--text-muted);
-            margin-bottom: 15px;
-        }
+.prompt-frame {
+    border: 1px solid var(--border);
+    padding: 30px;
+    margin: 40px 0;
+    background: #fafafa;
+}
 
-        .prompt-content {
-            white-space: pre-wrap;
-            font-size: 0.9rem;
-        }
+.prompt-version {
+    font-size: 0.75rem;
+    color: var(--text-muted);
+    margin-bottom: 15px;
+}
 
-        footer {
-            margin: 80px 0 60px;
-            padding-top: 40px;
-            border-top: 1px solid var(--border);
-            font-size: 0.85rem;
-            color: var(--text-muted);
-            text-align: center;
-        }
-    </style>
+.prompt-content {
+    white-space: pre-wrap;
+    font-size: 0.9rem;
+}    </style>
 </head>
-
 <body>
 <div class="container">
 
@@ -104,7 +100,7 @@
 <div class="section">
     <p>
         Here you find the prompt used to ask the AI to assess papers before they are published on this site.
-        The prompt specifies how the AI evaluates a text with respect to the platform’s editorial criteria.
+        The prompt specifies how the AI evaluates a text with respect to the platform's editorial criteria.
     </p>
     <p>
         When a paper satisfies these criteria, the resulting AI-assisted editorial assessment is published alongside the text.
@@ -127,6 +123,25 @@
 </footer>
 
 </div>
+
+<script src="ai-prompt.js"></script>
+<script>
+    const content = document.getElementById('prompt-content');
+    const version = document.getElementById('prompt-version');
+
+    if (typeof AI_EDITORIAL_PROMPT !== 'undefined') {
+        content.textContent = AI_EDITORIAL_PROMPT.trim();
+    } else {
+        content.textContent = 'Prompt not available.';
+    }
+
+    if (typeof Version !== 'undefined') {
+        version.textContent = `Prompt version ${Version}`;
+    } else {
+        version.textContent = 'Prompt version unknown';
+    }
+</script></body>
+</html>>
 
 <script src="ai-prompt.js"></script>
 <script>
