--- a/manifesto.html
+++ b/manifesto.html
@@ -8,73 +8,69 @@
     <meta property="og:title" content="Manifesto — AI-Theoretical">
     <meta property="og:description" content="A new framework for human-AI co-authorship in theoretical disciplines.">
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-
     <style>
-        :root {
-            --accent-blue: #2563eb;
-            --text-main: #1a1a1a;
-            --text-muted: #666;
-            --border: #e5e5e0;
-        }
+:root {
+    --accent-blue: #2563eb;
+    --text-main: #1a1a1a;
+    --text-muted: #666;
+    --border: #e5e5e0;
+}
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #fff;
-            color: var(--text-main);
-            line-height: 1.6;
-            padding: 0 40px;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body {
+    font-family: 'Inter', sans-serif;
+    background: #fff;
+    color: var(--text-main);
+    line-height: 1.6;
+    padding: 0 40px;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
-        header {
-            padding: 60px 0 30px;
-        }
+header {
+    padding: 60px 0 30px;
+}
 
-        .nav {
-            font-size: 0.75rem;
-            color: var(--text-muted);
-            text-decoration: none;
-            display: inline-block;
-            margin-bottom: 10px;
-        }
+.nav {
+    font-size: 0.75rem;
+    color: var(--text-muted);
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 10px;
+}
 
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 2.4rem;
-            font-weight: 700;
-            letter-spacing: -1px;
-            margin-bottom: 20px;
-        }
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.4rem;
+    font-weight: 700;
+    letter-spacing: -1px;
+    margin-bottom: 20px;
+}
 
-        hr {
-            border: 0;
-            border-top: 1px solid var(--border);
-            margin-bottom: 40px;
-        }
+hr {
+    border: 0;
+    border-top: 1px solid var(--border);
+    margin-bottom: 40px;
+}
 
-        .section {
-            max-width: 720px;
-            font-size: 0.95rem;
-            margin-bottom: 30px;
-        }
+.section {
+    max-width: 720px;
+    font-size: 0.95rem;
+    margin-bottom: 30px;
+}
 
-        footer {
-            margin: 80px 0 60px;
-            padding-top: 40px;
-            border-top: 1px solid var(--border);
-            font-size: 0.85rem;
-            color: var(--text-muted);
-            text-align: center;
-        }
-    </style>
+footer {
+    margin: 80px 0 60px;
+    padding-top: 40px;
+    border-top: 1px solid var(--border);
+    font-size: 0.85rem;
+    color: var(--text-muted);
+    text-align: center;
+}    </style>
 </head>
-
 <body>
 <div class="container">
 
@@ -96,7 +92,7 @@
         For us, collaboration refers to the joint participation of human and artificial agents in the
         generative phase of writing. AI systems are not confined to stylistic refinement or bibliographic
         assistance, but actively contribute by suggesting unconventional connections, alternative
-        conceptual routes, and exploratory directions that may lie outside the author’s initial framing.
+        conceptual routes, and exploratory directions that may lie outside the author's initial framing.
     </p>
 </div>
 
@@ -119,6 +115,18 @@
 </div>
 
 <div class="section">
+    <p>
+        What matters here is the capacity of a text to sustain conceptual scrutiny and to generate
+        constraints that remain meaningful beyond a single theoretical idiom.
+    </p>
+</div>
+
+<footer>
+    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
+</footer>
+
+</div></body>
+</html>on">
     <p>
         What matters here is the capacity of a text to sustain conceptual scrutiny and to generate
         constraints that remain meaningful beyond a single theoretical idiom.
