--- a/manifesto.html
+++ b/manifesto.html
@@ -69,6 +69,15 @@ footer {
     font-size: 0.85rem;
     color: var(--text-muted);
     text-align: center;
+}
+
+footer a {
+    color: var(--text-muted);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--accent-blue);
 }    </style>
 </head>
 <body>
@@ -126,18 +135,4 @@ footer {
 </footer>
 
 </div></body>
-</html>on">
-    <p>
-        What matters here is the capacity of a text to sustain conceptual scrutiny and to generate
-        constraints that remain meaningful beyond a single theoretical idiom.
-    </p>
-</div>
-
-    <footer>
-        <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
-    </footer>
-
-</div>
-</body>
 </html>
-
