--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -71,6 +71,15 @@ footer {
     text-align: center;
 }
 
+footer a {
+    color: var(--text-muted);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--accent-blue);
+}
+
 .section h2 {
     font-size: 0.85rem;
     font-weight: 600;
@@ -176,9 +185,4 @@ footer {
 </footer>
 
 </div></body>
-</html>class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
-    </footer>
-
-</div>
-</body>
 </html>
