--- a/invite.html
+++ b/invite.html
@@ -69,6 +69,15 @@ footer {
     font-size: 0.85rem;
     color: var(--text-muted);
     text-align: center;
+}
+
+footer a {
+    color: var(--text-muted);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--accent-blue);
 }    </style>
 </head>
 <body>
@@ -113,21 +122,4 @@ footer {
     <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
 </footer>
 </div></body>
-</html>ration,
-        you are invited to get in touch.
-    </p>
-</div>
-
-<div class="section">
-    <p>
-        Contact: <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
-    </p>
-</div>
-
-    <footer>
-        <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
-    </footer>
-</div>
-</body>
 </html>
-
