Fix: link to ai-editorial-prompts.html, remove old page

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ footer a {
         <div class="manifesto-label">
             <a href="manifesto.html">Manifesto</a>
             <a href="editorial-principles.html">Editorial framework</a>
-            <a href="ai-editorial-prompt.html">AI editorial prompt</a>
+            <a href="ai-editorial-prompts.html">AI editorial prompt</a>
             <a href="invite.html">Invitation to participate</a>
             <a href="submit.html">Submit a paper</a>
         </div>
