--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -1,73 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Editorial Framework - AI-Theoretical</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-<style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; --bg-light: #f9f9f9; --bg-inactive: #f0f0eb; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Editorial Framework — AI-Theoretical</title>
+    <meta name="description" content="The protocol for AI-assisted editorial assessment. Learn about our criteria for theoretical adequacy, coherence, and scholarly grounding.">
+    <meta property="og:title" content="Editorial Framework — AI-Theoretical">
+    <meta property="og:description" content="How we evaluate human-AI co-authored papers.">
+    <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <style>
+:root {
+    --accent-blue: #2563eb;
+    --text-main: #1a1a1a;
+    --text-muted: #666;
+    --border: #e5e5e0;
+}
+
 * { margin: 0; padding: 0; box-sizing: border-box; }
-body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }
-.container { max-width: 900px; margin: 0 auto; }
-nav { margin-bottom: 40px; }
-nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }
-h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 20px; }
-h2 { font-size: 1.4rem; margin: 30px 0 15px 0; border-bottom: 1px solid var(--border); padding-bottom: 10px; }
-h3 { font-size: 1.1rem; margin: 20px 0 10px 0; color: var(--text-main); }
-p { margin-bottom: 15px; }
-.intro { font-size: 1.1rem; color: var(--text-muted); margin-bottom: 30px; }
-.track-card { background: var(--bg-light); padding: 20px; margin: 15px 0; border-radius: 8px; border-left: 4px solid var(--accent-blue); }
-.track-card h3 { margin-top: 0; }
-.track-card p { margin-bottom: 10px; font-size: 0.95rem; }
-select { padding: 8px 12px; font-size: 1rem; border: 1px solid var(--border); border-radius: 4px; margin-right: 10px; }
-.prompt-display { background: var(--bg-light); padding: 20px; border-radius: 8px; margin-top: 20px; white-space: pre-wrap; font-family: monospace; font-size: 0.85rem; max-height: 500px; overflow-y: auto; }
-.prompt-inactive { background: var(--bg-inactive); opacity: 0.8; }
-.version-info { font-size: 0.85rem; color: var(--text-muted); margin: 10px 0; }
-.changelog { font-style: italic; color: var(--text-muted); }
-footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; font-size: 0.85rem; color: var(--text-muted); }
-footer a { color: var(--text-main); }</style>
+body {
+    font-family: 'Inter', sans-serif;
+    background: #fff;
+    color: var(--text-main);
+    line-height: 1.6;
+    padding: 0 40px;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+header {
+    padding: 60px 0 30px;
+}
+
+.nav {
+    font-size: 0.75rem;
+    color: var(--text-muted);
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.4rem;
+    font-weight: 700;
+    letter-spacing: -1px;
+    margin-bottom: 20px;
+}
+
+hr {
+    border: 0;
+    border-top: 1px solid var(--border);
+    margin-bottom: 40px;
+}
+
+.section {
+    max-width: 720px;
+    font-size: 0.95rem;
+    margin-bottom: 30px;
+}
+
+footer {
+    margin: 80px 0 60px;
+    padding-top: 40px;
+    border-top: 1px solid var(--border);
+    font-size: 0.85rem;
+    color: var(--text-muted);
+    text-align: center;
+}
+
+footer a {
+    color: var(--text-muted);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--accent-blue);
+}
+
+.section h2 {
+    font-size: 0.85rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.section p {
+    font-size: 0.95rem;
+    margin-bottom: 14px;
+    color: var(--text-main);
+}    </style>
 </head>
 <body>
 <div class="container">
-<nav><a href="/">← Back to AI-Theoretical</a></nav>
-<h1>Editorial Framework</h1>
-<p class="intro">AI-Theoretical accepts submissions in four distinct tracks, each with specific evaluation criteria and standards.</p>
-<div class="track-card">
-<h3>Research Preprint</h3>
-<p>Original research contributions presenting new theoretical results, methods, or frameworks. Expected to meet higher standards of completeness, argumentation, and scholarly apparatus.</p>
-<p><strong>Key criteria:</strong> Novelty, correctness, contribution, bibliography adequacy. Original work with substantive contribution receives an acceptance bonus.</p>
+
+<header>
+    <a href="index.html" class="nav">← Back</a>
+    <h1>Editorial Framework</h1>
+    <hr>
+</header>
+
+<div class="section">
+    <h2>Scope</h2>
+    <p>
+        AI-Theoretical hosts high-level theoretical preprints and working papers developed through
+        explicit collaboration between human authors and AI systems. The platform is not a journal
+        and does not operate as a peer-review venue.
+    </p>
+    <p>
+        The aim is to provide an open space for structured theoretical work that is rigorous,
+        conceptually explicit, and publicly accessible, whether or not it is intended for subsequent
+        academic publication.
+    </p>
 </div>
-<div class="track-card">
-<h3>Working Paper</h3>
-<p>Original ideas that may still be developing. Originality and intellectual contribution are weighted more heavily than completeness of bibliography or polish of presentation.</p>
-<p><strong>Key criteria:</strong> Originality strongly weighted. Minor issues in bibliography, structure, or effectiveness should not block acceptance of genuinely original work.</p>
+
+<div class="section">
+    <h2>Admissible domains</h2>
+    <p>
+        Contributions are restricted to academically grounded domains, including formal sciences,
+        natural sciences, and philosophy pursued in an explicitly argumentative and conceptual manner.
+        Work in economics, sociology, or political theory is admissible only when it adopts a clear
+        theoretical framework and avoids purely rhetorical or ideological discourse.
+    </p>
+    <p>
+        Texts relying primarily on impressionistic commentary, stylistic inflation, or intra-canonical
+        self-legitimation fall outside the scope of the platform.
+    </p>
 </div>
-<div class="track-card">
-<h3>Expository/Theoretical Essay</h3>
-<p>Essays that clarify, synthesize, or pedagogically present existing theoretical material. Judged on clarity of exposition, accuracy of representation, and pedagogical effectiveness.</p>
-<p><strong>Key criteria:</strong> Pedagogical value, accuracy of representation, coverage relative to stated scope. Lower semantic opacity is strongly preferred.</p>
+
+<div class="section">
+    <h2>Types of contributions</h2>
+    <p>
+        Accepted texts are classified into one of the following categories:
+    </p>
+    <p>
+        <strong>Research preprints</strong>, presenting original theses, models, or results in provisional form;
+        <br>
+        <strong>Expository or theoretical essays</strong>, aimed at conceptual clarification, reconstruction, or critical synthesis;
+        <br>
+        <strong>Critical reviews</strong>, offering analytically grounded assessments of existing works or research programs.
+    </p>
 </div>
-<div class="track-card">
-<h3>Critical Review</h3>
-<p>Analytical engagement with existing work, arguments, or theoretical positions. Judged on quality of critical analysis, fairness to positions examined, and argumentative rigor.</p>
-<p><strong>Key criteria:</strong> Fairness (charitable interpretation), critical depth (engages fundamental assumptions), argumentative rigor. Unfairness or ad hominem is grounds for rejection.</p>
+
+<div class="section">
+    <h2>Editorial assessment</h2>
+    <p>
+        Each accepted text is accompanied by an AI-assisted editorial assessment. The assessment is
+        produced using a fixed and publicly documented evaluation protocol and is published alongside
+        the text.
+    </p>
+    <p>
+        The assessment does not certify correctness, originality, or importance in an academic sense.
+        Its function is to evaluate formal and conceptual adequacy relative to the text's declared aims,
+        including coherence, consistency, scholarly grounding, and cognitive traction beyond a single
+        theoretical canon.
+    </p>
 </div>
-<h2>Common Standards</h2>
-<p>All tracks share these rejection criteria:</p>
-<ul style="margin-left: 20px; margin-bottom: 20px;">
-<li>Category mismatch (submission does not fit any track)</li>
-<li>Systematic or undermining errors in correctness</li>
-<li>Major coherence issues</li>
-<li>High semantic opacity (obfuscatory writing)</li>
-<li>Suspected plagiarism or harmful content</li>
-<li>Inadequate structure</li>
-</ul>
-<h2>AI Assessment</h2>
-<p>All submissions are assessed by Claude AI using track-specific prompts. The prompts are versioned and publicly available on the <a href="ai-editorial-prompts.html">AI Editorial Prompts</a> page.</p>
-<p>Each published paper includes the prompt version used for its assessment, ensuring full transparency and reproducibility.</p>
+
+<div class="section">
+    <h2>Role of AI</h2>
+    <p>
+        AI systems are used as explicit cognitive instruments within the editorial process. They do not
+        function as autonomous authors or authorities, but as constrained evaluative and generative tools.
+    </p>
+    <p>
+        The use of AI is not concealed. Each text may include a separate note describing the nature and
+        extent of AI involvement in its development.
+    </p>
+</div>
+
+<div class="section">
+    <h2>Responsibility</h2>
+    <p>
+        Final responsibility for inclusion on the platform remains human. In borderline cases, AI-generated
+        assessments may be overridden or supplemented by human editorial judgment.
+    </p>
+</div>
+
 <footer>
-<p>Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
+    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
 </footer>
-</div>
-</body>
+
+</div></body>
 </html>
