Add favicon to all pages

--- a/ai-editorial-prompt.html
+++ b/ai-editorial-prompt.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>AI Editorial Prompt — AI-Theoretical</title>
     <meta name="description" content="Transparency in evaluation: read the exact system prompt used for the AI-assisted editorial assessment of our papers.">
     <meta property="og:title" content="AI Editorial Prompt — AI-Theoretical">
