--- a/papers/image-based-development-with-llm-agents.html
+++ b/papers/image-based-development-with-llm-agents.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 <title>Image-Based Development with LLM Agents: Building ai-theoretical.org in 72 Hours — AI-Theoretical</title>
 <meta name="description" content="This paper documents the development of ai-theoretical.org, an automated academic preprint repository, built through direct collaboration between a human and...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria), Claude Opus 4.5">
