--- a/papers/the-invisible-pillar-on-the.html
+++ b/papers/the-invisible-pillar-on-the.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 <title>The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical</title>
 <meta name="description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
