--- a/papers/the-invisible-wealth-mismeasurement-of.html
+++ b/papers/the-invisible-wealth-mismeasurement-of.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 <title>The Invisible Wealth: Mismeasurement of Quality, the Myth of Stagnation, and the Underestimation of Real Income Growth — AI-Theoretical</title>
 <meta name="description" content="The dominant narrative of contemporary political economy holds that advanced economies have experienced decades of stagnating real wages and rising inequalit...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
