--- a/papers/the-stack-of-local-representations.html
+++ b/papers/the-stack-of-local-representations.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 <title>The Stack of Local Representations on a Coadjoint Orbit: A Categorical Approach — AI-Theoretical</title>
 <meta name="description" content="We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and s...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
