--- a/papers/wave-function-collapse-as-lie.html
+++ b/papers/wave-function-collapse-as-lie.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 <title>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical</title>
 <meta name="description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction ...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
