Add favicon to all pages, remove orphan files

--- a/invite.html
+++ b/invite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Invitation to Participate — AI-Theoretical</title>
     <meta name="description" content="Join the AI-Theoretical project. We invite researchers interested in exploring human-AI co-authorship in philosophy, science, and mathematics.">
     <meta property="og:title" content="Join AI-Theoretical">
