--- a/manifesto.html
+++ b/manifesto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Manifesto — AI-Theoretical</title>
     <meta name="description" content="Our vision for human-AI symbiosis in theoretical research. Exploring transparent authorship and AI as an active cognitive partner in epistemology and science.">
     <meta property="og:title" content="Manifesto — AI-Theoretical">
