--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Editorial Framework — AI-Theoretical</title>
     <meta name="description" content="The protocol for AI-assisted editorial assessment. Learn about our criteria for theoretical adequacy, coherence, and scholarly grounding.">
     <meta property="og:title" content="Editorial Framework — AI-Theoretical">
