--- a/submit.html
+++ b/submit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Submit a Paper — AI-Theoretical</title>
     <meta name="description" content="Submit your human-AI co-authored theoretical paper for publication on AI-Theoretical.">
     <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, submit paper, publication">
