Add Working Papers to editorial principles

--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -140,6 +140,8 @@ footer a:hover {
     <p>
         <strong>Research preprints</strong>, presenting original theses, models, or results in provisional form;
         <br>
+        <strong>Working papers</strong>, documenting ongoing research, methodological explorations, or preliminary findings not yet ready for formal publication;
+        <br>
         <strong>Expository or theoretical essays</strong>, aimed at conceptual clarification, reconstruction, or critical synthesis;
         <br>
         <strong>Critical reviews</strong>, offering analytically grounded assessments of existing works or research programs.
