Added Author Access link to footer

--- a/index.html
+++ b/index.html
@@ -486,6 +486,9 @@ footer a {
     
     <footer>
     Interested in participating? Contact <a href="mailto:franco.cazzaniga@uninsubria.it">franco.cazzaniga@uninsubria.it</a>
+    <div class="author-access">
+        <a href="/author-access.html">Author Access</a> — Manage your submissions
+    </div>
     <div class="powered-by">
         Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a>
     </div>
