Add RSS feed (feed.xml), add RSS link to all pages

--- a/papers/the-invisible-pillar-on-the.html
+++ b/papers/the-invisible-pillar-on-the.html
@@ -23,6 +23,7 @@
 <meta name="twitter:description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
 <meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
+<link rel="alternate" type="application/rss+xml" title="AI-Theoretical RSS Feed" href="https://ai-theoretical.org/feed.xml">
 <script type="application/ld+json">
 {
 	"@type" : "ScholarlyArticle",
