--- a/editorial-principles.html
+++ b/editorial-principles.html
@@ -11,181 +11,9 @@
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
-:root {
-    --accent-blue: #2563eb;
-    --text-main: #1a1a1a;
-    --text-muted: #666;
-    --border: #e5e5e0;
-}
-
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body {
-    font-family: 'Inter', sans-serif;
-    background: #fff;
-    color: var(--text-main);
-    line-height: 1.6;
-    padding: 0 40px;
-}
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-header {
-    padding: 60px 0 30px;
-}
-
-.nav {
-    font-size: 0.75rem;
-    color: var(--text-muted);
-    text-decoration: none;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-
-h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 2.4rem;
-    font-weight: 700;
-    letter-spacing: -1px;
-    margin-bottom: 20px;
-}
-
-hr {
-    border: 0;
-    border-top: 1px solid var(--border);
-    margin-bottom: 40px;
-}
-
-.section {
-    max-width: 720px;
-    font-size: 0.95rem;
-    margin-bottom: 30px;
-}
-
-footer {
-    margin: 80px 0 60px;
-    padding-top: 40px;
-    border-top: 1px solid var(--border);
-    font-size: 0.85rem;
-    color: var(--text-muted);
-    text-align: center;
-}
-
-footer a {
-    color: var(--text-muted);
-    text-decoration: none;
-}
-
-footer a:hover {
-    color: var(--accent-blue);
-}
-
-.section h2 {
-    font-size: 0.85rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
-}
-
-.section p {
-    font-size: 0.95rem;
-    margin-bottom: 14px;
-    color: var(--text-main);
-}    </style>
+:root {    --accent-blue: #2563eb;    --text-main: #1a1a1a;    --text-muted: #666;    --border: #e5e5e0;}* { margin: 0; padding: 0; box-sizing: border-box; }body {    font-family: 'Inter', sans-serif;    background: #fff;    color: var(--text-main);    line-height: 1.6;    padding: 0 40px;}.container {    max-width: 1000px;    margin: 0 auto;}header {    padding: 60px 0 30px;}.nav {    font-size: 0.75rem;    color: var(--text-muted);    text-decoration: none;    display: inline-block;    margin-bottom: 10px;}h1 {    font-family: 'Playfair Display', serif;    font-size: 2.4rem;    font-weight: 700;    letter-spacing: -1px;    margin-bottom: 20px;}hr {    border: 0;    border-top: 1px solid var(--border);    margin-bottom: 40px;}.section {    max-width: 720px;    font-size: 0.95rem;    margin-bottom: 30px;}footer {    margin: 80px 0 60px;    padding-top: 40px;    border-top: 1px solid var(--border);    font-size: 0.85rem;    color: var(--text-muted);    text-align: center;}footer a {    color: var(--text-muted);    text-decoration: none;}footer a:hover {    color: var(--accent-blue);}
+.section h2 {    font-size: 0.85rem;    font-weight: 600;    text-transform: uppercase;    letter-spacing: 1px;    margin-bottom: 10px;}.section p {    font-size: 0.95rem;    margin-bottom: 14px;    color: var(--text-main);}    </style>
 </head>
 <body>
-<div class="container">
-
-<header>
-    <a href="index.html" class="nav">← Back</a>
-    <h1>Editorial Framework</h1>
-    <hr>
-</header>
-
-<div class="section">
-    <h2>Scope</h2>
-    <p>
-        AI-Theoretical hosts high-level theoretical preprints and working papers developed through
-        explicit collaboration between human authors and AI systems. The platform is not a journal
-        and does not operate as a peer-review venue.
-    </p>
-    <p>
-        The aim is to provide an open space for structured theoretical work that is rigorous,
-        conceptually explicit, and publicly accessible, whether or not it is intended for subsequent
-        academic publication.
-    </p>
-</div>
-
-<div class="section">
-    <h2>Admissible domains</h2>
-    <p>
-        Contributions are restricted to academically grounded domains, including formal sciences,
-        natural sciences, and philosophy pursued in an explicitly argumentative and conceptual manner.
-        Work in economics, sociology, or political theory is admissible only when it adopts a clear
-        theoretical framework and avoids purely rhetorical or ideological discourse.
-    </p>
-    <p>
-        Texts relying primarily on impressionistic commentary, stylistic inflation, or intra-canonical
-        self-legitimation fall outside the scope of the platform.
-    </p>
-</div>
-
-<div class="section">
-    <h2>Types of contributions</h2>
-    <p>
-        Accepted texts are classified into one of the following categories:
-    </p>
-    <p>
-        <strong>Research preprints</strong>, presenting original theses, models, or results in provisional form;
-        <br>
-        <strong>Working papers</strong>, documenting ongoing research, methodological explorations, or preliminary findings not yet ready for formal publication;
-        <br>
-        <strong>Expository or theoretical essays</strong>, aimed at conceptual clarification, reconstruction, or critical synthesis;
-        <br>
-        <strong>Critical reviews</strong>, offering analytically grounded assessments of existing works or research programs.
-    </p>
-</div>
-
-<div class="section">
-    <h2>Editorial assessment</h2>
-    <p>
-        Each accepted text is accompanied by an AI-assisted editorial assessment. The assessment is
-        produced using a fixed and publicly documented evaluation protocol and is published alongside
-        the text.
-    </p>
-    <p>
-        The assessment does not certify correctness, originality, or importance in an academic sense.
-        Its function is to evaluate formal and conceptual adequacy relative to the text's declared aims,
-        including coherence, consistency, scholarly grounding, and cognitive traction beyond a single
-        theoretical canon.
-    </p>
-</div>
-
-<div class="section">
-    <h2>Role of AI</h2>
-    <p>
-        AI systems are used as explicit cognitive instruments within the editorial process. They do not
-        function as autonomous authors or authorities, but as constrained evaluative and generative tools.
-    </p>
-    <p>
-        The use of AI is not concealed. Each text may include a separate note describing the nature and
-        extent of AI involvement in its development.
-    </p>
-</div>
-
-<div class="section">
-    <h2>Responsibility</h2>
-    <p>
-        Final responsibility for inclusion on the platform remains human. In borderline cases, AI-generated
-        assessments may be overridden or supplemented by human editorial judgment.
-    </p>
-</div>
-
-<footer>
-    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
-</footer>
-
-</div></body>
+<div class="container"><header>    <a href="index.html" class="nav">← Back</a>    <h1>Editorial Framework</h1>    <hr></header><div class="section">    <h2>Scope</h2>    <p>        AI-Theoretical hosts high-level theoretical preprints and working papers developed through        explicit collaboration between human authors and AI systems. The platform is not a journal        and does not operate as a peer-review venue.    </p>    <p>        The aim is to provide an open space for structured theoretical work that is rigorous,        conceptually explicit, and publicly accessible, whether or not it is intended for subsequent        academic publication.    </p></div><div class="section">    <h2>Admissible domains</h2>    <p>        Contributions are restricted to academically grounded domains, including formal sciences,        natural sciences, and philosophy pursued in an explicitly argumentative and conceptual manner.        Work in economics, sociology, or political theory is admissible only when it adopts a clear        theoretical framework and avoids purely rhetorical or ideological discourse.    </p>    <p>        Texts relying primarily on impressionistic commentary, stylistic inflation, or intra-canonical        self-legitimation fall outside the scope of the platform.    </p></div><div class="section">    <h2>Types of contributions</h2>    <p>        Accepted texts are classified into one of the following categories:    </p>    <p>        <strong>Research preprints</strong>, presenting original theses, models, or results in provisional form;        <br>        <strong>Working papers</strong>, documenting ongoing research, methodological explorations, or preliminary findings not yet ready for formal publication;        <br>        <strong>Expository or theoretical essays</strong>, aimed at conceptual clarification, reconstruction, or critical synthesis;        <br>        <strong>Critical reviews</strong>, offering analytically grounded assessments of existing works or research programs.    </p></div><div class="section">    <h2>Editorial assessment</h2>    <p>        Each accepted text is accompanied by an AI-assisted editorial assessment. The assessment is        produced using a fixed and publicly documented evaluation protocol and is published alongside        the text.    </p>    <p>        The assessment does not certify correctness, originality, or importance in an academic sense.        Its function is to evaluate formal and conceptual adequacy relative to the text's declared aims,        including coherence, consistency, scholarly grounding, and cognitive traction beyond a single        theoretical canon.    </p></div><div class="section">    <h2>Role of AI</h2>    <p>        AI systems are used as explicit cognitive instruments within the editorial process. They do not        function as autonomous authors or authorities, but as constrained evaluative and generative tools.    </p>    <p>        The use of AI is not concealed. Each text may include a separate note describing the nature and        extent of AI involvement in its development.    </p></div><div class="section">    <h2>Responsibility</h2>    <p>        Final responsibility for inclusion on the platform remains human. In borderline cases, AI-generated        assessments may be overridden or supplemented by human editorial judgment.    </p></div><footer>    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p></footer></div></body>
 </html>
