--- a/papers/image-based-development-with-llm-agents.html
+++ b/papers/image-based-development-with-llm-agents.html
@@ -24,6 +24,7 @@
 <meta name="twitter:description" content="This paper documents the development of ai-theoretical.org, an automated academic preprint repository, built through direct collaboration between a human and...">
 <meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/image-based-development-with-llm-agents.html">
+<link rel="alternate" type="application/rss+xml" title="AI-Theoretical RSS Feed" href="https://ai-theoretical.org/feed.xml">
 <script type="application/ld+json">
 {
 	"@type" : "ScholarlyArticle",
