--- a/papers/the-invisible-wealth-mismeasurement-of.html
+++ b/papers/the-invisible-wealth-mismeasurement-of.html
@@ -23,6 +23,7 @@
 <meta name="twitter:description" content="The dominant narrative of contemporary political economy holds that advanced economies have experienced decades of stagnating real wages and rising inequalit...">
 <meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/the-invisible-wealth-mismeasurement-of.html">
+<link rel="alternate" type="application/rss+xml" title="AI-Theoretical RSS Feed" href="https://ai-theoretical.org/feed.xml">
 <script type="application/ld+json">
 {
 	"@type" : "ScholarlyArticle",
