--- a/papers/the-stack-of-local-representations.html
+++ b/papers/the-stack-of-local-representations.html
@@ -23,6 +23,7 @@
 <meta name="twitter:description" content="We construct a stack R of local stabilizer representations over a coadjoint orbit O of a compact Lie group G, verify the descent conditions explicitly, and s...">
 <meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/the-stack-of-local-representations.html">
+<link rel="alternate" type="application/rss+xml" title="AI-Theoretical RSS Feed" href="https://ai-theoretical.org/feed.xml">
 <script type="application/ld+json">
 {
 	"@type" : "ScholarlyArticle",
