--- a/papers/wave-function-collapse-as-lie.html
+++ b/papers/wave-function-collapse-as-lie.html
@@ -23,6 +23,7 @@
 <meta name="twitter:description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction ...">
 <meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
+<link rel="alternate" type="application/rss+xml" title="AI-Theoretical RSS Feed" href="https://ai-theoretical.org/feed.xml">
 <script type="application/ld+json">
 {
 	"@type" : "ScholarlyArticle",
