--- a/submit.html
+++ b/submit.html
@@ -14,152 +14,9 @@
     <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;1,300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
-:root {
-    --accent-blue: #2563eb;
-    --text-main: #1a1a1a;
-    --text-muted: #666;
-    --border: #e5e5e0;
-}
-
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body {
-    font-family: 'Inter', sans-serif;
-    background: #fff;
-    color: var(--text-main);
-    line-height: 1.6;
-    padding: 0 40px;
-}
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-header {
-    padding: 60px 0 30px;
-}
-
-.nav {
-    font-size: 0.75rem;
-    color: var(--text-muted);
-    text-decoration: none;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-
-h1 {
-    font-family: 'Playfair Display', serif;
-    font-size: 2.4rem;
-    font-weight: 700;
-    letter-spacing: -1px;
-    margin-bottom: 20px;
-}
-
-hr {
-    border: 0;
-    border-top: 1px solid var(--border);
-    margin-bottom: 40px;
-}
-
-.section {
-    max-width: 720px;
-    font-size: 0.95rem;
-    margin-bottom: 30px;
-}
-
-footer {
-    margin: 80px 0 60px;
-    padding-top: 40px;
-    border-top: 1px solid var(--border);
-    font-size: 0.85rem;
-    color: var(--text-muted);
-    text-align: center;
-}
-
-footer a {
-    color: var(--text-muted);
-    text-decoration: none;
-}
-
-footer a:hover {
-    color: var(--accent-blue);
-}
-
-/* PANELS LAYOUT */
-.panels {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    margin-top: 2rem;
-}
-
-.panel {
-    background: #f9f9f9;
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    padding: 2rem;
-}
-
-.panel h2 {
-    font-family: inherit;
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 0.75rem;
-}
-
-.panel p {
-    font-size: 0.9rem;
-    color: var(--text-muted);
-    margin-bottom: 1.5rem;
-    line-height: 1.5;
-}
-
-.panel-button {
-    display: inline-block;
-    background: var(--text-main);
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 0.85rem;
-    font-weight: 500;
-    transition: 0.2s;
-}
-
-.panel-button:hover {
-    background: var(--accent-blue);
-}
-
-@media (max-width: 700px) {
-    .panels {
-        grid-template-columns: 1fr;
-    }
-}    </style>
+:root {    --accent-blue: #2563eb;    --text-main: #1a1a1a;    --text-muted: #666;    --border: #e5e5e0;}* { margin: 0; padding: 0; box-sizing: border-box; }body {    font-family: 'Inter', sans-serif;    background: #fff;    color: var(--text-main);    line-height: 1.6;    padding: 0 40px;}.container {    max-width: 1000px;    margin: 0 auto;}header {    padding: 60px 0 30px;}.nav {    font-size: 0.75rem;    color: var(--text-muted);    text-decoration: none;    display: inline-block;    margin-bottom: 10px;}h1 {    font-family: 'Playfair Display', serif;    font-size: 2.4rem;    font-weight: 700;    letter-spacing: -1px;    margin-bottom: 20px;}hr {    border: 0;    border-top: 1px solid var(--border);    margin-bottom: 40px;}.section {    max-width: 720px;    font-size: 0.95rem;    margin-bottom: 30px;}footer {    margin: 80px 0 60px;    padding-top: 40px;    border-top: 1px solid var(--border);    font-size: 0.85rem;    color: var(--text-muted);    text-align: center;}footer a {    color: var(--text-muted);    text-decoration: none;}footer a:hover {    color: var(--accent-blue);}
+/* PANELS LAYOUT */.panels {    display: grid;    grid-template-columns: 1fr 1fr;    gap: 2rem;    margin-top: 2rem;}.panel {    background: #f9f9f9;    border: 1px solid var(--border);    border-radius: 4px;    padding: 2rem;}.panel h2 {    font-family: inherit;    font-size: 1.2rem;    font-weight: 600;    margin-bottom: 0.75rem;}.panel p {    font-size: 0.9rem;    color: var(--text-muted);    margin-bottom: 1.5rem;    line-height: 1.5;}.panel-button {    display: inline-block;    background: var(--text-main);    color: white;    text-decoration: none;    padding: 10px 20px;    font-size: 0.85rem;    font-weight: 500;    transition: 0.2s;}.panel-button:hover {    background: var(--accent-blue);}@media (max-width: 700px) {    .panels {        grid-template-columns: 1fr;    }}    </style>
 </head>
 <body>
-<div class="container">
-
-<header>
-    <a href="index.html" class="nav">← Back</a>
-    <h1>Submissions</h1>
-    <hr>
-</header>
-
-<div class="panels">
-    <div class="panel">
-        <h2>Submit a New Paper</h2>
-        <p>Propose your work for publication on AI-Theoretical.</p>
-        <a href="submit-form.html" class="panel-button">New Submission →</a>
-    </div>
-    
-    <div class="panel">
-        <h2>Manage Your Papers</h2>
-        <p>Withdraw a paper or submit a new version of an existing publication.</p>
-        <a href="author-access.html" class="panel-button">Author Access →</a>
-    </div>
-</div>
-
-<footer>
-    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p>
-</footer>
-
-</div></body>
+<div class="container"><header>    <a href="index.html" class="nav">← Back</a>    <h1>Submissions</h1>    <hr></header><div class="panels">    <div class="panel">        <h2>Submit a New Paper</h2>        <p>Propose your work for publication on AI-Theoretical.</p>        <a href="submit-form.html" class="panel-button">New Submission →</a>    </div>        <div class="panel">        <h2>Manage Your Papers</h2>        <p>Withdraw a paper or submit a new version of an existing publication.</p>        <a href="author-access.html" class="panel-button">Author Access →</a>    </div></div><footer>    <p class="powered-by">Powered by <a href="https://www.anthropic.com/claude" target="_blank">Claude AI</a> and <a href="https://pharo.org" target="_blank">Pharo Smalltalk</a></p></footer></div></body>
 </html>
