--- a/papers/image-based-development-with-llm-agents.html
+++ b/papers/image-based-development-with-llm-agents.html
@@ -10,6 +10,7 @@
 <meta name="citation_title" content="Image-Based Development with LLM Agents: Building ai-theoretical.org in 72 Hours">
 <meta name="citation_author" content="Franco Cazzaniga">
 <meta name="citation_author" content="Claude">
+<meta name="citation_publication_date" content="2026-01-07">
 <meta name="citation_pdf_url" content="https://ai-theoretical.org/papers/image-based-development-with-llm-agents.pdf">
 <meta name="citation_abstract_html_url" content="https://ai-theoretical.org/papers/image-based-development-with-llm-agents.html">
 <meta name="citation_publisher" content="AI-Theoretical">
@@ -58,7 +59,7 @@
 		}
 	],
 	"@context" : "https://schema.org",
-	"datePublished" : ""
+	"datePublished" : "2026-01-07"
 }</script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
@@ -67,7 +68,7 @@
 <div class="container">
 <nav><a href="/">← Back to AI-Theoretical</a></nav>
 <h1>Image-Based Development with LLM Agents: Building ai-theoretical.org in 72 Hours</h1>
-<p class="meta">By <strong>Franco Cazzaniga (Università dell'Insubria), Claude Opus 4.5</strong> & <span class="ai-tag">Claude Opus 4.5</span> | </p>
+<p class="meta">By <strong>Franco Cazzaniga (Università dell'Insubria), Claude Opus 4.5</strong> & <span class="ai-tag">Claude Opus 4.5</span> | 7 January 2026</p>
 <a href="image-based-development-with-llm-agents.pdf" class="btn btn-black" download>Download PDF</a>
 <section><h2>Abstract</h2><p>This paper documents the development of ai-theoretical.org, an automated academic preprint repository, built through direct collaboration between a human and an AI developer. After an initial setup phase (“Day 0”) where the human configured the cloud infrastructure, approximately 72 hours of development followed with Claude (Anthropic) operating directly on a live Pharo Smalltalk image as the primary implementer. The project employed the Model Context Protocol (MCP) to give the language model full access to the runtime environment, enabling it to inspect objects, compile methods, execute tests, and iterate without human mediation at the code level. We describe the architecture, the development process, the distinctive nature of pair programming in this context, and the implications of this pattern for software development. 
 The complete source code is available at https://github.com/ai-theoretical/ai-theoretical.org.</p></section>
